feat: 添加命令部分补全功能，string处理优化